@startuml
!include ..\ChargeCommon.puml
package Charge{
    package Membership{
        class MembershipRemittance {
            name: string
            created_at: datetime
            payment_date: datetime
            concept: string
        }
        class MembershipReceipt
        class Fee{
            amount: integer
        }
        MembershipRemittance *-- "1..N" MembershipReceipt
    }

    package AcademicCourse{
        class AcademicCourse
    }
    Fee --o AcademicCourse
    MembershipRemittance o-- AcademicCourse

    package Family{
        class Family
    }
    MembershipReceipt o--  Family

    MembershipReceipt --> Receipt
    MembershipRemittance --> Remittance

    MembershipReceipt *-- State
}
@enduml
